trying to trigger button press

--- a/background.html
+++ b/background.html
@@ -1,8 +1,11 @@
-document.addEventListener('DOMContentLoaded', function () {
-  //This is where you add EventListeners
-});
+<html>
+<head>
+<script>
 function testCall(){
   window.alert("FROM TRIGGER");
 }
 //Name of callback function to trigger when clicked. No popup necessary.
 chrome.pageAction.onClicked.addListener(testCall);
+</script>
+</head>
+</html>
